test/MC/SVE/regression-tests/negative_tests/sve-ld2b-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU8E2Load1LSSZ
// Offset register Rm cannot be xzr
ld2b {z1.b, z2.b}, p4/z, [x24, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
